force-app/main/default/objects/Session_Protocol_Contact__c/Session_Protocol_Contact__c.object-meta.xml
<CustomObject>
    <label>Session Protocol Contact</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Protocol Contact ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Session Protocol Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>