force-app/main/default/objects/Session_Protocol_Contact__c/fields/Novel_Not_Novel__c.field-meta.xml
<CustomField>
    <fullName>Novel_Not_Novel__c</fullName>
    <label>Novel/Not Novel</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Novel</fullName>
            </value>
            <value>
                <fullName>Not Novel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>