force-app/main/default/objects/Session_Protocol_Contact__c/fields/Session_Protocol__c.field-meta.xml
<CustomField>
    <fullName>Session_Protocol__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Session Protocol</label>
    <referenceTo>Session_Protocol__c</referenceTo>
    <relationshipLabel>Session Protocol Contacts</relationshipLabel>
    <relationshipName>Session_Protocol_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>